--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-datetime": "^2.16.3",
     "react-dom": "^16.11.0",
     "react-scripts": "3.0.1",
-    "reactstrap": "^8.1.1"
+    "reactstrap": "^8.1.1",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
