--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "gsap": "^2.1.3",
     "moment": "^2.24.0",
     "react": "^16.11.0",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.11.0",
+    "react-gsap": "^1.2.0",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.1.1",
     "styled-components": "^4.4.1"
